# ray_tracing

./: CMakeLists.txt
ConcurrencyTools/code/headers/concurrency_tools/: ThreadPool.hpp
ConcurrencyTools/code/source/: ThreadPool.cpp
ConcurrencyTools/projects/visual-studio-2022/: ConcurrencyTools.vcxproj  ConcurrencyTools.vcxproj.filters
app/: CMakeLists.txt
app/code/: Camera_Controller.cpp  Camera_Controller.hpp  main.cpp
app/projects/visual-studio-2022/: App.sln  App.vcxproj  App.vcxproj.filters
engine/: CMakeLists.txt
engine/code/headers/engine/: Component.hpp  Control.hpp  Controller.hpp  Display_Stage.hpp  Entity.hpp  Id.hpp  Id_Provider.hpp  Input_Event.hpp  Input_Event_Queue.hpp  Input_Stage.hpp  Kernel.hpp  Key_Code.hpp  Key_Event.hpp  Object_Pool.hpp  Path_Tracing.hpp  Registrar.hpp  Registry.hpp  Scene.hpp  Sparse_Array.hpp  Stage.hpp  Starter.hpp  Subsystem.hpp  Timer.hpp  Transform.hpp  Transformation.hpp  Window.hpp  declarations.hpp  fnv.hpp  macros.hpp  math.hpp
engine/code/headers/engine/internal/: SDL_Window_Handle.hpp
engine/code/sources/: Control.cpp  Display_Stage.cpp  Input_Stage.cpp  Kernel.cpp  Path_Tracing.cpp  Starter.cpp  Transformation.cpp  Window.cpp  winmain.cpp
engine/projects/visual-studio-2022/: Engine.sln  Engine.vcxproj  Engine.vcxproj.filters
ray tracer/: CMakeLists.txt
ray tracer/code/headers/raytracer/: Buffer.hpp  Camera.hpp  Color.hpp  Diffuse_Material.hpp  Id.hpp  Intersectable.hpp  Intersection.hpp  Linear_Space.hpp  Material.hpp  Memory_Pool.hpp  Metallic_Material.hpp  Model.hpp  Node.hpp  Path_Tracer.hpp  Pinhole_Camera.hpp  Plane.hpp  Random.hpp  Ray.hpp  Scene.hpp  Sky_Environment.hpp  Skydome.hpp  Spatial_Data_Structure.hpp  Sphere.hpp  Timer.hpp  Transform.hpp  declarations.hpp  math.hpp
ray tracer/code/sources/: Camera.cpp  Linear_Space.cpp  Path_Tracer.cpp  Pinhole_Camera.cpp  Plane.cpp  Random.cpp  Sphere.cpp
ray tracer/projects/visual-studio-2022/: Ray Tracer.sln  Ray Tracer.vcxproj  Ray Tracer.vcxproj.filters
